[package]
name = "pe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
constcat = "0.6.0"
fastnbt = { path = "../fastnbt/fastnbt" }
mcnbt = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
